--- a/code/package.json
+++ b/code/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.0",
+    "node-schedule": "^2.0.0",
     "sequelize": "^6.6.5"
   }
 }
