--- a/code/package.json
+++ b/code/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.0",
     "node-schedule": "^2.0.0",
+    "nodemailer": "^6.7.0",
     "sequelize": "^6.6.5"
   }
 }
